[metadata]
name = harkness
description = A python library for generating VR-friendly visualization files from pandas dataframes.
long_description_content_type = text/markdown
url = https://github.com/KCollins/harkness
project_urls =
    Bug Tracker = https://github.com/KCollins/harkness/issues
    Changelog = https://github.com/KCollins/harkness/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
